--- a/style.css
+++ b/style.css
@@ -3,3 +3,18 @@ h1 {
     color: red;
     
 }
+
+
+.navbar{
+
+    display: flex;
+    background-color: grey;
+}
+
+
+.navitem{
+    float: left;
+    font-size: 24px;
+    color: darkblue;
+
+}
