--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ aside.left-container {
     color: white;
     text-align: center;
 
+
+}
+#gap {
+  padding-right: 20px;
+  padding-left: 20px;
 }
 section.main{
   height:100vh;
@@ -74,7 +79,7 @@ img {
   stroke: 15px;
   border-color: green;
   border: solid;
-  width: 80px;
+  width: 100%;
   display: block;
   margin: auto;
   
