--- a/style.css
+++ b/style.css
@@ -85,6 +85,11 @@ img {
   
 }
 
+img.grid-image{
+  width: 80%;
+  height: auto;
+}
+
 
 .grid-container {
     display: grid;
@@ -93,11 +98,10 @@ img {
     padding: 10px;
     column-gap: 10px;
     row-gap: 10px;
+    grid-auto-rows: 150px; 
 }
 .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
-    font-size: 30px;
     text-align: center;
 }
