--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ img.grid-image{
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     background-color: #61A6F3;
     padding: 10px;
     column-gap: 10px;
