--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ aside.left-container {
 
     float: left;
     width: 40%;
+    max-width: 300px;
     height: 100%;
     background-color: blue;
     color: white;
