--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ div.box{
 
 img.grid-image{
   width: 80%;
-  height: 200px;
+  height: 160px;
   object-fit: cover;
 }
 
@@ -101,10 +101,15 @@ img.grid-image{
     padding: 10px;
     column-gap: 10px;
     row-gap: 10px;
-    grid-auto-rows: 150px; 
+    grid-auto-rows: 400px; 
 }
 .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     text-align: center;
+}
+
+p.description {
+  overflow:hidden;
+  max-height: 110px;
 }
