--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ aside.left-container {
     width: 40%;
     max-width: 300px;
     height: 100%;
-    background-color: blue;
+    background-color: #334499;
     color: white;
     text-align: center;
 
@@ -147,5 +147,9 @@ p.description {
 }
 
 
-
+h3.intro{
+  text-align:center;
+  margin: 20px;
+  font-family: Trebuchet MS
+}
 
