--- a/style.css
+++ b/style.css
@@ -42,13 +42,13 @@ li.navitem a {
 
 aside.left-container {
 
-    float: left;
     width: 40%;
     max-width: 300px;
     height: 100%;
     background-color: #334499;
     color: white;
     text-align: center;
+    position: absolute;
 
 
 }
@@ -56,13 +56,18 @@ aside.left-container {
   padding-right: 20px;
   padding-left: 20px;
 }
-section.main{
-  height:100vh;
+
+html, body{
 }
 
-section.right-container{
-  float:left;
-  width: 60%;
+main{
+  position: absolute;
+   
+}
+
+.right-container{
+  margin-left: 40%;
+  padding: 5%;
   height: 100%;
 
 }
@@ -71,6 +76,8 @@ h1.title {
     font-size: 30px;
   
 }
+
+
 
 div.box{
   margin:auto;
@@ -173,10 +180,14 @@ h3.intro{
 }
 
 .activity img {
-  width: 110px;
-  height: 100px;
+  width: 90px;
+  height: 70px;
   object-fit: cover;
   border-radius: 10px;
+}
+
+section{
+  clear: both;
 }
 
 
